---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: ????
  Changes:
    - Add 'bob-' prefix to internal technology names to prevent creating duplicate technologies when bobs inserters is also enabled
---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: 2025-05-01
  Minor Features:
    - Add on_qai_inserter_direction_changed event for other mods to listen to
    - Add on_qai_inserter_vectors_changed event for other mods to listen to
    - Add on_qai_inserter_adjustment_finished event for other mods to listen to
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2025-04-26
  Bugfixes:
    - Fix the data_api ignore feature straight up not doing anything
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-04-26
  Minor Features:
    - Add data_api.lua for other mods to control which inserters should be adjustable
  Bugfixes:
    - Potentially fix error when adjusting inserter being built by space platforms, or due to other mods interfering
    - Fix 16 way inserters not being ignored while 8 way inserters were ignored
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024-12-22
  Changes:
    - Make the adjust key bind consuming to enable using left click with a modifier without also building entities
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2024-11-19
  Features:
    - Add zh-CN (Chinese - China) locale thanks to plexpt - https://mods.factorio.com/mod/quick-adjustable-inserters/discussion/673c5dffd2e7eab6fda8e467
  Bugfixes:
    - Fix locale referencing the pipette key bind showing "Unknown control sequence"